<resources>
    <string name="app_name">NoteMe</string>
    <string name="noteme">NoteMe</string>
    <string name="task_name">Task Name:</string>
    <string name="created_date">Created Date:</string>
    <string name="deadline">Deadline:</string>
    <string name="task_details">Task Details</string>
    <string name="status">Status:</string>
    <string name="description">Description:</string>
    <string name="dummy_long_text">Task Full Description. Task Full Description. Task Full Description. Task Full Description. Task Full Description. </string>
    <string name="add_tasks">Add Tasks</string>
    <string name="submit">Submit</string>
    <string name="write_description">Write Description .........</string>
    <string name="edit_task">Edit Task</string>
    <string name="open">Open</string>
    <string name="task_saved_successfully">Task Saved Successfully</string>

    <string-array name="status_list">
        <item>Open</item>
        <item>In-Progress</item>
        <item>Test</item>
        <item>Done</item>
    </string-array>
</resources>