<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="129dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/background_task">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/task_name"
        android:textColor="@color/Color000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/created_date"
        android:textColor="@color/Color000000"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/deadline"
        android:textColor="@color/Color000000"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCreatedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/amaranth"
        android:text="02-11-2021"
        android:textColor="@color/Color000000"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="02-11-2021"
        android:textSize="16dp"
        android:textColor="@color/Color000000"
        android:fontFamily="@font/amaranth"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/tvCreatedDate"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDate"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Task name"
        android:textSize="16dp"
        android:textColor="@color/Color8C3C3C"
        android:fontFamily="@font/amaranth"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/tvCreatedDate"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDate"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/icon_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivDelete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeadline"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/icon_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeadline"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>