<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityTaskDetailsScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ColorEBEBEB"
            android:id="@+id/toolbar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/amaranth_bold"
                android:textColor="@color/Color000000"
                android:text="@string/task_details"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="@string/created_date"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDelete" />

        <TextView
            android:id="@+id/tvTaskCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/amaranth"
            android:text="00-00-0000"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="@string/status"
            android:textColor="@color/Color8C3C3C"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/tvTaskStatus"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvTaskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="In-Progress"
            android:textColor="@color/ColorED6415"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="Task Title"
            android:textColor="@color/Color8C3C3C"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="@string/description"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />


        <TextView
            android:id="@+id/tvTaskDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/dummy_long_text"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/tvTaskStatus"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="@string/deadline"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskDes" />

        <TextView
            android:id="@+id/tvTaskDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/amaranth"
            android:text="00-00-0000"
            android:textColor="@color/Color000000"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <LinearLayout
            android:id="@+id/containerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/containerPhone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskDeadline"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="28dp"
                android:layout_height="29dp"
                android:src="@drawable/icon_email" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_bold"
                android:text="E-mail"
                android:textColor="@color/Color000000"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/containerEmail"
            app:layout_constraintEnd_toStartOf="@+id/containerUrl"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/containerEmail"
            app:layout_constraintTop_toTopOf="@+id/containerEmail">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="28dp"
                android:layout_height="29dp"
                android:src="@drawable/icon_phone" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_bold"
                android:text="Phone"
                android:textColor="@color/Color000000"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/containerPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/containerPhone"
            app:layout_constraintTop_toTopOf="@+id/containerPhone">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="29dp"
                android:src="@drawable/icon_url" />

            <TextView
                android:id="@+id/textViewURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_bold"
                android:text="URL"
                android:textColor="@color/Color000000"
                android:textSize="14dp" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="38dp"
        app:elevation="0dp"
        app:pressedTranslationZ="0dp"
        app:fabSize="normal"
        android:layout_gravity="bottom|right"
        android:backgroundTint="@color/ColorED6415"
        app:srcCompat="@drawable/icon_edit_white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>